--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Neverland</title>
+  <style>* { font-family: sans-serif; } h1 { font-size: 1em; margin: 16px auto 4px auto; }</style>
   <script defer src="./neverland.js"></script>
   <script defer src="./test.js"></script>
 </head>
