removed the exported augmentor for test sake

--- a/test/children.html
+++ b/test/children.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <script>
-const {default: $, augmentor, render, html, useRef, useState} = neverland;
+const {default: $, render, html, useRef, useState} = neverland;
 
 const Child = $((name, i) => html`
   <div>${name} ${i}</div>`
