--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Neverland</title>
   <style>* { font-family: sans-serif; } h1 { font-size: 1em; margin: 16px auto 4px auto; }</style>
-  <script defer src="./neverland.js"></script>
+  <script defer src="../index.js"></script>
   <script defer src="./test.js"></script>
 </head>
 <body></body>
